test_output.txt

BSTTests.hs:121:10: error: [GHC-88464]
    Variable not in scope:
      rotateRight :: BST key20 String -> BST key21 String
    |
121 |         (rotateRight (insert 5 "five" (insert 10 "ten" empty))))
    |          ^^^^^^^^^^^
